Basic CSS styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Java Quiz App</title>
-    <link rel=" stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div class="appContainer">
@@ -17,6 +17,7 @@
                 <button class="button">Answer 3</button>
                 <button class="button">Answer 4</button>
             </div>
+            <button id="nextButton">Next</button>
         </div>
 
     </div>
