--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
                 <button class="button">Answer 3</button>
                 <button class="button">Answer 4</button>
             </div>
+        </div>
+        <div class="controlsContainer">
+            <button id="startButton">Start</button>
             <button id="nextButton">Next</button>
         </div>
-
     </div>
 
-
+<script src="script.js"></script>
 </body>
 </html>
