Partial Code and Timer

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Java Quiz App</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     <div class="appContainer">
-        <h1>Quiz</h1>
+        <div class="topbar">
+            <h1>Quiz</h1>
+            <h2 class="countdown"></h2>
+        </div>
         <div class="quizContainer">
             <h2 id="question">Question text</h2>
             <div id="answerButtons">
@@ -24,6 +28,6 @@
         </div>
     </div>
 
-<script src="script.js"></script>
+<script src="assets/script.js"></script>
 </body>
 </html>
