Debugged code, needs HighScore screen.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="appContainer">
         <div class="topbar">
             <h1>Quiz</h1>
-            <h2 class="countdown"></h2>
+            <h2 id="countdown"></h2>
         </div>
         <div class="quizContainer">
             <h2 id="question">Question text</h2>
