--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         </div>
         <div class="controlsContainer">
             <button id="startButton">Start</button>
-            <button id="nextButton">Next</button>
-        </div>
+            <button id="highScoresButton">High Scores</button>
+            <button id="nextButton">Next</button>            
+        </div> 
     </div>
 <script src="assets/script.js"></script>
 </body>
